--- a/EEPROM_Client/EEPROM_Client/MainWindow.xaml
+++ b/EEPROM_Client/EEPROM_Client/MainWindow.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EEPROM_Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="1000
+        ">
     <Grid>
-        
+        <Button Name="btn_getPorts"  Content="Get all ports" HorizontalAlignment="Left" Margin="28,38,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="btn_getPorts_Click"/>
+        <ComboBox Name="cb_ports" HorizontalAlignment="Left" Margin="28,94,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Name="btn_start_stop_connection" Content="Start connection" HorizontalAlignment="Left" Margin="28,152,0,0" VerticalAlignment="Top" Width="120" Click="btn_start_stop_connection_Click"/>
+        <TextBox x:Name="txtBox_recieve" HorizontalAlignment="Left" Margin="28,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="184" Height="258"/>
+        <TextBox x:Name="txtBox_send" HorizontalAlignment="Left" Margin="259,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152" Height="90"/>
+        <Button x:Name="btn_send" Content="Send data" HorizontalAlignment="Left" Margin="259,369,0,0" VerticalAlignment="Top" Width="152" Click="btn_send_Click"/>
+
     </Grid>
 </Window>
