--- a/EEPROM_Client/EEPROM_Client/MainWindow.xaml
+++ b/EEPROM_Client/EEPROM_Client/MainWindow.xaml
@@ -5,16 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EEPROM_Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1000
-        ">
+        Title="MainWindow" Height="750" Width="1000">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="79*"/>
+            <ColumnDefinition Width="171*"/>
+        </Grid.ColumnDefinitions>
         <Button Name="btn_getPorts"  Content="Get all ports" HorizontalAlignment="Left" Margin="28,38,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="btn_getPorts_Click"/>
         <ComboBox Name="cb_ports" HorizontalAlignment="Left" Margin="28,94,0,0" VerticalAlignment="Top" Width="120"/>
         <Button Name="btn_start_stop_connection" Content="Start connection" HorizontalAlignment="Left" Margin="28,152,0,0" VerticalAlignment="Top" Width="120" Click="btn_start_stop_connection_Click"/>
         <TextBox x:Name="txtBox_recieve" HorizontalAlignment="Left" Margin="28,203,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="184" Height="258"/>
-        <TextBox x:Name="txtBox_send" HorizontalAlignment="Left" Margin="28,504,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="184" Height="90"/>
-        <Button x:Name="btn_send" Content="Send data" HorizontalAlignment="Left" Margin="28,633,0,0" VerticalAlignment="Top" Width="184" Click="btn_send_Click"/>
-        <Image Name="imgMemoryArray" HorizontalAlignment="Left" Height="512" Margin="355,38,0,0" VerticalAlignment="Top" Width="512"/>
+        <TextBox x:Name="txtBox_send" HorizontalAlignment="Left" Margin="28,558,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="184" Height="36"/>
+        <Button x:Name="btn_send" Content="Send data(march)" HorizontalAlignment="Left" Margin="28,610,0,0" VerticalAlignment="Top" Width="184" Click="btn_send_Click"/>
+        <Image Name="imgMemoryArray" HorizontalAlignment="Left" Height="512" Margin="39,0,0,134" VerticalAlignment="Bottom" Width="512" Grid.Column="1"/>
+        <Button x:Name="btn_SaveLogs" Content="Save Logs" HorizontalAlignment="Left" Margin="28,498,0,0" VerticalAlignment="Top" Width="184" Height="30" Click="btn_SaveLogs_Click"/>
+        <TextBox x:Name="txtBx_LogName" HorizontalAlignment="Left" Margin="28,475,0,0" TextWrapping="Wrap" Text="log1" VerticalAlignment="Top" Width="120"/>
+        <Button Name="btn_Read" Content="Read Memory" HorizontalAlignment="Left" Margin="28,648,0,0" VerticalAlignment="Top" Width="184" Click="btn_Read_Click"/>
+        <Button x:Name="btn_Write1" Content="Write 1" HorizontalAlignment="Left" Margin="28,683,0,0" VerticalAlignment="Top" Width="184" Click="btn_Write1_Click"/>
 
     </Grid>
 </Window>
